# common

./: .gitignore  .gitmodules  .hgignore  .hgtags  LICENSE.txt  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  run-tdoc@t-doc-common.py  run.desktop  run.py  serve.bat  serve.desktop  tdocv.py
.github/actions/setup/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-tdoc/: action.yml
.github/workflows/: deploy-github-pages.yml  package.yml  publish.yml  setup-python.yml  test.yml
config/: 0.60.req  0.61.req  0.62.req  0.63.req  0.64.req  0.65.req  0.66.req  0.67.req  0.68.req  0.69.req  0.70.req  0.71.req  0.72.req  0.73.req  0.74.req  0.75.req  0.76.req  0.77.req  0.78.req  0.79.req  0.80.req  0.81.req  0.82.req  0.83.req  0.84.req  0.85.req  build.req  dev.req  run-stage2.py  run.toml  t-doc.toml  uv.req
docs/: conf.py  development.md  edit.md  faq.md  index.md  install.md  release-notes.md  release_notes.md
docs/_cache/: sphinx.inv
docs/_cached/: python.inv  sphinx.inv
docs/_static/: database.sql  demo-html-script.js  demo-html-styles.css  site-styles.css
docs/demo/: chart.md  crypto.md  diagram.md  directives.md  elements.md  embedding.md  html.md  index.md  layout.md  math.md  micropython.md  people.sql  poll.md  python.md  quiz.md  quizzes.md  sql.md
docs/demo/layout/: hide.md
docs/demo/python/: index.md  pygame.md
docs/install/: index.md  release_notes.md
docs/reference/: chart.md  config.md  diagram.md  directives.md  elements.md  exec.md  extension.md  index.md  layout.md  math.md  people.sql  poll.md  python-libs.md  quiz.md
releases/: releases.toml
tdoc/common/: __init__.py  api.py  api_mod_wsgi.py  cli.py  common.mk  config.py  console.py  database.py  defaults.py  deps.py  exec.py  iframe.py  logs.py  metadata.py  num.py  solution.py  store.py  theme.toml  util.py  wsgi.py
tdoc/common/cli/: __init__.py  deps.py  group.py  log.py  repo.py  sandbox.Containerfile  sandbox.bashrc  sandbox.hgrc  sandbox.py  site.py  store.py  test.py  token.py  user.py
tdoc/common/components/: copyright.html
tdoc/common/ext/: __init__.py  chart.py  defaults.py  diagram.py  exec.py  iframe.py  layout.py  math.py  metadata.py  num.py  patch.py  poll.py  quiz.py  quizz.py  solution.py  table.py
tdoc/common/python/: __init__.py  svg.py
tdoc/common/python/tdoc/: core.py  pygame.py
tdoc/common/scripts/: editor.js  tdoc-editor.js  tdoc-worker.js
tdoc/common/static/: tdoc-coi.js  tdoc-early.js.jinja  tdoc-exec.js  tdoc-html.js  tdoc-python.js  tdoc-python.py  tdoc-reload.js.jinja  tdoc-sql.js  tdoc-worker-init.js.jinja
tdoc/common/static/styles/: t-doc.css  tdoc.css
tdoc/common/static/tdoc/: api.js  chart.js  core.js  crypto.js  diagram.js  domain.html.jinja  early.js  early.js.jinja  exec-html-iframe.js  exec-html.js  exec-micropython.js  exec-python.js  exec-python.py  exec-sql.js  exec.js  jsxgraph.js  load.js  math.js  micropython.js  poll.js  print-common.css  print-exam.css  print.css  quiz.js  quizz.js  reload.js  reload.js.jinja  serial.js  styles.css  styles.css.jinja
tdoc/common/templates/: copyright.html  tdoc-badges.html
tdoc/common/tools/: __init__.py  deps.py
tests/: sites.py
tools/: bashrc  check-deps.py  deps.py  fix-deps.py  hatch_hooks.py  mhg.sh  release-reqs.sh  release.sh  requirements.sh  sandbox.Containerfile  sandbox.py  test-repos.py  test-sites.py  update-run-py.py  update-run-py.sh  wsgi.py
