# Copyright 2024 Caroline Blank <caro@c-space.org>
# Copyright 2024 Remy Blank <remy@c-space.org>
# SPDX-License-Identifier: MIT

[project]
name = "t-doc-common"
description = "Common functionality for t-doc"
authors = [
    {name = "Remy Blank", email = "remy@c-space.org"},
    {name = "Caroline Blank", email = "caro@c-space.org"},
]
urls.Code = "https://github.com/t-docs/common"
urls.Documentation = "https://t-doc.org/common/"
urls.Homepage = "https://t-doc.org/"
readme = "README.md"
license.file = "LICENSE.txt"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6; sys_platform == 'win32'",
    "myst-parser>=3.0.1",
    "Sphinx>=8.0.2",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx_design>=0.6.0",
    "sphinx-exercise>=0.4.1",
    "sphinx-proof>=0.1.3",
    "sphinx-togglebutton>=0.3.2",
]
dynamic = ["version"]

[project.scripts]
tdoc = "tdoc.common.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tdoc/common/__init__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
only-include = [
    "ext/sqlite-wasm/sqlite-wasm/jswasm",
    "tdoc",
]
sources."ext/sqlite-wasm/sqlite-wasm" = "tdoc/common/static"
