# Copyright 2024 Remy Blank <remy@c-space.org>
# SPDX-License-Identifier: MIT

[project]
name = "t-doc-common"
description = "Common functionality for t-doc"
authors = [{name = "Remy Blank", email = "remy@c-space.org"}]
urls.Code = "https://github.com/t-doc-org/common"
urls.Documentation = "https://common.t-doc.org/"
urls.Homepage = "https://t-doc.org/"
readme = "README.md"
license = "MIT"
# BUG(hatchling): PEP 639 says it should be a list, but hatchling wants a table
# <https://github.com/pypa/hatch/issues/1715>. The files are recognized
# automatically, so for now we don't specify them explicitly.
# license-files = ["LICENSE.txt", "LICENSES.deps.txt"]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6; sys_platform == 'win32'",
    "myst-parser>=4.0.0",
    "pyyaml>=6.0.2",
    "Sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx_design>=0.6.1",
]
dynamic = ["version"]

[project.scripts]
tdoc = "tdoc.common.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tdoc/common/__init__.py"

[tool.hatch.metadata.hooks.custom]
path = "tools/hatch_hooks.py"

[tool.hatch.build.hooks.custom]
path = "tools/hatch_hooks.py"

[tool.hatch.build.targets.sdist]
artifacts = [
    "/tdoc/common/static.gen/",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "tdoc",
]
artifacts = [
    "/tdoc/common/static.gen/",
]
